2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Revert usb-quiesce since it's wrong.

	* grub-core/disk/ieee1275/ofdisk.c (quiesce): Removed.
	(grub_ofdisk_init): Don't do quiesce.

2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options): Apply
	PowerMac workaround to Xserves as well.
	Information supplied by: Benjamin Herrenschmidt.

2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't assume that beginning address is also the entry point on ppc.

	* grub-core/loader/powerpc/ieee1275/linux.c (linux_entry): New variable.
	(grub_linux_boot): Use linux_entry.
	(grub_linux_load32): Fill linux_entry. Fix setting linux_addr.
	(grub_linux_load64): Likewise.

2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix cross-disk check on non-PreP machines.

2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/console.c (grub_console_fini): Don't
	needlessly lose the console.

2012-06-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/dyncmd.c (read_command_list): Don't access freed
	space.

2012-06-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove non-functional EFI grub_get_rtc. Put a better fatal message
	than current grub_get_rtc() not implemented when booted with
	coreboot without TSC.

	* grub-core/Makefile.am: Exclude efi/time.h from kernel headers.
	Add machine/time.h to kernel headers on loongson.
	* grub-core/Makefile.core.def (kernel): Remove
	kern/generic/rtc_get_time_ms.c on qemu-multiboot-coreboot.
	* grub-core/kern/efi/efi.c (grub_rtc_get_time_ms): Removed.
	(grub_get_rtc): Likewise.
	* grub-core/kern/generic/rtc_get_time_ms.c: Include grub/machine/time.h.
	* grub-core/kern/i386/coreboot/init.c (grub_get_rtc): Removed.
	* grub-core/kern/i386/pc/init.c: Include grub/machine/init.h.
	* grub-core/kern/i386/tsc.c (grub_tsc_init)
	[!GRUB_MACHINE_PCBIOS && !GRUB_MACHINE_IEEE1275]: Call grub_fatal